<resources>
    <string name="app_name">Converter</string>

    <string name="app_chapter">Chapter Selection</string>
    <string name="app_settings">Settings</string>

    <string name="app_switch_theme">Dark theme</string>

    <string name="app_chapter_household">Household</string>
    <string name="app_chapter_mathematics">Mathematics</string>
    <string name="app_chapter_dimension">Dimension</string>
    <string name="app_chapter_motion">Motion</string>
    <string name="app_chapter_computer_science">Computer science</string>
    <string name="app_chapter_mechanics">Mechanics</string>
    <string name="app_chapter_chemistry">Chemistry</string>
    <string name="app_chapter_energy">Energy</string>
    <string name="app_chapter_electricity">Electricity</string>
    <string name="app_chapter_photometry">Photometry</string>
    <string name="app_chapter_radioactivity">Radioactivity</string>
    <string name="app_chapter_magnetism">Magnetism</string>
    <string name="app_chapter_other">Other</string>

    <string name="app_section_currency">Currency</string>
    <string name="app_section_clothing_shoe">Clothing and shoe</string>
    <string name="app_section_cooking">Cooking</string>
    <string name="app_section_fuel_consumption">Fuel consumption</string>
    <string name="app_section_time">Time</string>

    <string name="app_section_angle">Angle</string>
    <string name="app_section_numbers">Numbers</string>
    <string name="app_section_units_fractions">Units and fractions</string>
    <string name="app_section_si_prefixes">SI prefixes</string>
    <string name="app_section_astronomy_distance">Astronomy distance</string>

    <string name="app_section_length">Length</string>
    <string name="app_section_area">Area</string>
    <string name="app_section_volume">Volume</string>

    <string name="app_section_speed">Speed</string>
    <string name="app_section_acceleration">Acceleration</string>
    <string name="app_section_angular_speed">Angular speed</string>
    <string name="app_section_flow_rate">Flow rate</string>

    <string name="app_section_data_storage">Data storage</string>
    <string name="app_section_data_transfer">Data transfer</string>

    <string name="app_section_pressure">Pressure</string>
    <string name="app_section_weight">Weight</string>
    <string name="app_section_force">Force</string>
    <string name="app_section_torque">Torque</string>

    <string name="app_section_density">Density</string>
    <string name="app_section_dynamic_viscosity">Dynamic viscosity</string>
    <string name="app_section_kinematic_viscosity">Kinematic viscosity</string>
    <string name="app_section_mineralization">Mineralization</string>

    <string name="app_section_energy">Energy</string>
    <string name="app_section_power">Power</string>
    <string name="app_section_temperature">Temperature</string>

    <string name="app_section_electric_charge">Electric charge</string>
    <string name="app_section_electric_current">Electric current</string>
    <string name="app_section_electrical_resistance">Electrical resistance</string>
    <string name="app_section_electric_potential">Electric potential</string>
    <string name="app_section_electric_capacitance">Electric capacitance</string>

    <string name="app_section_luminance">Luminance</string>
    <string name="app_section_illuminance">Illuminance</string>

    <string name="app_section_radiation">Radiation</string>
    <string name="app_section_radioactivity">Radioactivity</string>

    <string name="app_section_magnetic_field">Magnetic field</string>

    <string name="app_section_typography">Typography</string>
    <string name="app_section_sound">Sound</string>

    <string name="app_dimension_length_picometer">Picometer</string>
    <string name="app_dimension_length_nanometre">Nanometre</string>
    <string name="app_dimension_length_micrometer">Micrometer</string>
    <string name="app_dimension_length_millimeter">Millimeter</string>
    <string name="app_dimension_length_centimeter">Centimeter</string>
    <string name="app_dimension_length_decimeter">Decimeter</string>
    <string name="app_dimension_length_meter">Meter</string>
    <string name="app_dimension_length_kilometer">Kilometer</string>
    <string name="app_dimension_length_inch">Inch</string>
    <string name="app_dimension_length_foot">Foot</string>
    <string name="app_dimension_length_yard">Yard</string>
    <string name="app_dimension_length_mile_int">Mile (international)</string>
    <string name="app_dimension_length_arshin">Arshin</string>
    <string name="app_dimension_length_sazhen">Sazhen</string>
    <string name="app_dimension_length_milestone">Milestone</string>
    <string name="app_dimension_length_light_year">Light year</string>
    <string name="app_dimension_length_angstrom">Angstrom</string>
    <string name="app_dimension_length_elbow">Elbow (ancient oriental)</string>
    <string name="app_dimension_length_vershok">Vershok</string>
    <string name="app_dimension_length_unit">Unit</string>
    <string name="app_dimension_length_leagues_over">Leagues (overland)</string>
    <string name="app_dimension_length_span">Span</string>
    <string name="app_dimension_length_furlong">Furlong</string>
    <string name="app_dimension_length_parsec">Parsec</string>
    <string name="app_dimension_length_astronomical_unit">Astronomical unit</string>
    <string name="app_dimension_length_nautical_mile_uk">Nautical mile (UK)</string>
    <string name="app_dimension_length_nautical_mile_int">Nautical mile (international)</string>
    <string name="app_dimension_length_atomic_unit">Atomic unit</string>
    <string name="app_dimension_length_caliber">Caliber</string>
    <string name="app_dimension_length_electron_radius_cl">Electron radius (classical)</string>
    <string name="app_dimension_length_bohr_radius">Bohr radius</string>
    <string name="app_dimension_length_earths_equatorial_radius">Earth`s equatorial radius</string>
    <string name="app_dimension_length_earths_polar_radius">Earth`s polar radius</string>
    <string name="app_dimension_length_earths_sun_distance">Earth`s distance from Sun</string>
    <string name="app_dimension_length_sun_radius">Sun`s radius</string>
    <string name="app_dimension_length_planck_length">Planck length</string>
    <string name="app_dimension_length_hand">Hand</string>
    <string name="app_dimension_length_finger">Finger</string>
    <string name="app_dimension_length_handbreadth_uk">Handbreadth (UK)</string>
    <string name="app_dimension_length_aln_sw">Aln (Swedish)</string>
    <string name="app_dimension_length_ken_j">Ken (Jap)</string>
    <string name="app_dimension_length_centiinch">Centiinch</string>
    <string name="app_dimension_length_point">Point</string>
    <string name="app_dimension_length_fathom">Fathom</string>
    <string name="app_dimension_length_rod">Rod</string>
    <string name="app_dimension_length_inch_us">Inch (US survey)</string>
    <string name="app_dimension_length_foot_us">Foot (US survey)</string>
    <string name="app_dimension_length_fathom_us">Fathom (US survey)</string>
    <string name="app_dimension_length_rod_us">Rod (US survey)</string>
    <string name="app_dimension_length_chain_us">Chain (US survey)</string>
    <string name="app_dimension_length_furlong_us">Furlong (US survey)</string>
    <string name="app_dimension_length_mile_us">Mile (US survey)</string>
    <string name="app_dimension_length_league">League</string>
    <string name="app_dimension_length_nautical_league_uk">Nautical league (UK)</string>
    <string name="app_dimension_length_nautical_league_int">Nautical league (international)</string>
    <string name="app_dimension_length_cable_length">Cable length</string>
</resources>